--- a/card/static/replystorm.css
+++ b/card/static/replystorm.css
@@ -10,6 +10,8 @@ body {
 h1 {
     text-align: center;
     color: rgb(223, 189, 0);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 .dataframe {
     font-family: "Lucida Console", Monaco, monospace;
